# cmo-agent-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: installation.md  quickstart.md
docs/frameworks/: README.md  claude-code.md  codex.md  cursor.md  generic-mcp.md  opencode.md  qoder.md
plugins/cmo-agent-bridge/: .claude-mcp.json  .codex-mcp.json  .mcp.json
plugins/cmo-agent-bridge/.claude-plugin/: plugin.json
plugins/cmo-agent-bridge/.codex-plugin/: plugin.json
protocol/: operations.json  schema-corpus.json
scripts/: build_release.ps1  generate_manifest.py  install-codex-desktop.ps1
src/cmo_agent_bridge/: bootstrap.py  cli.py  config.py  errors.py  mcp_runtime.py  mcp_server.py  message_log.py  runtime_bundle.py  scenario_authoring_mcp.py  scenario_context.py  ui_time.py
src/cmo_agent_bridge/application/: __init__.py  compatibility_policy.py  (+10 more)
tests/contract/: test_mutation_failure_matrix.py
tests/fixtures/: valid_response.inst
tests/helpers/: fake_file_bridge_peer.py  mutation_failure_process.py
tests/integration/: test_cross_process_lock.py  test_same_channel_invariant.py  test_sqlite_concurrency.py
tests/project/: test_project_metadata.py
tests/release/: test_codex_desktop_installer.py  test_distribution.py  test_public_version_references.py
tests/unit/: test_bootstrap.py  test_cli.py  test_config.py  test_errors.py  test_lua_runtime.py  test_mcp_runtime.py  test_mcp_server.py  test_mcp_time_control.py  test_message_log.py  test_scenario_authoring_mcp.py  test_scenario_context.py  test_ui_time.py
(+97 files in other folders)
