[project]
name = "cmo-agent-bridge"
version = "0.2.1"
description = "Local stdio MCP bridge for commanding and authoring Command: Modern Operations scenarios"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Nuclear2" },
]
keywords = [
  "cmo",
  "command-modern-operations",
  "lua",
  "mcp",
  "wargame",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.28.1,<2",
  "pydantic>=2.12,<3",
  "psutil>=7.2,<8",
  "typer>=0.20,<1",
]

[project.urls]
Homepage = "https://github.com/Nuclear2/cmo-agent-bridge#readme"
Issues = "https://github.com/Nuclear2/cmo-agent-bridge/issues"
Repository = "https://github.com/Nuclear2/cmo-agent-bridge"

[project.scripts]
cmo-bridge = "cmo_agent_bridge.cli:app"

[dependency-groups]
dev = [
  "lupa>=2.8,<3",
  "pyinstaller>=6.21,<7",
  "pyright>=1.1.407,<2",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "pyyaml>=6,<7",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11.26,<0.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["cmo_live: requires a user-controlled CMO Build 1868 instance"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["src/cmo_agent_bridge/operations/generated_manifest.py"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
